# rust-music

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: cargo.yml
examples/: praeludium_no1.rs  praeludium_no1_multi_phrase.rs  praeludium_no1_organ_piano.rs  praeludium_no1_single_phrase.rs  readme_example.rs  scales_example.rs
src/: chord.rs  constants.rs  errors.rs  instrument.rs  lib.rs  note.rs  part.rs  phrase.rs  score.rs
src/composition/: mod.rs  scale.rs
src/constants/: mod.rs
src/note/: mod.rs
