[package]
name = "rust-music"
version = "0.1.0"
authors = ["Pierre-Alexandre Veyry"]
edition = "2021"
description = "A framework for programmatic music manipulation and composition"
readme = "README.md"
repository = "https://github.com/paveyry/rust-music"
license = "MIT"
keywords = ["music", "composition", "MIDI"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.37"
ordered-float = "3.4.0"
midly = "0.5.3"
