[package]
name = "rust-music"
version = "0.1.4"
authors = ["Pierre-Alexandre Veyry"]
edition = "2021"
description = """
A library for programmatic music manipulation and composition with MIDI export
"""
readme = "README.md"
include = [
    "/src",
    "LICENSE.txt",
    "/examples"
]
repository = "https://github.com/paveyry/rust-music"
license = "MIT"
keywords = ["music", "composition", "MIDI", "score", "sheet"]
categories = ["multimedia", "multimedia::audio", "multimedia::encoding"]

[dependencies]
thiserror = "1.0.37"
midly = "0.5.3"

[features]
composition = []

[[example]]
name = "scales_example"
required-features = ["composition"]